# vet

./: .env.example  .gitignore  DEPLOY_RENDER.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
app/: main.py
app/api/: rate_limit.py
app/api/routes/: admin.py  monitoring.py  site.py  webhook_utils.py  webhooks_doctor_telegram.py  webhooks_max.py  webhooks_telegram.py  webhooks_vk.py  webhooks_whatsapp.py
app/channels/: base.py  max_adapter.py  normalizer.py  registry.py  schemas.py  telegram_adapter.py  vk_adapter.py  whatsapp_adapter.py
app/core/: config.py  logging.py  security.py  tokens.py
app/crm/: service_search.py  site_leads.py
app/db/: session.py
app/db/migrations/: env.py
app/db/models/: __init__.py  analytics.py  business.py  crm.py  knowledge.py  mixins.py  services.py
app/db/repositories/: analytics.py  catalog.py  crm.py  knowledge.py  (+1 more)
app/dialogs/: intake.py  manager.py  schemas.py  state_machine.py
app/doctor_bot/: bot.py  handlers.py  keyboards.py  notifications.py
app/llm/: agent.py  client.py  embeddings.py  prompts.py  safety.py  schemas.py  sql_tools.py  tools.py
app/queue/: dispatcher.py  tasks.py  worker.py
app/reports/: generator.py  scheduler.py  schemas.py
scripts/: backup_postgres.sh  restore_postgres.sh  seed.py  setup_webhooks.py
site/: index.html  styles.css
tests/: helpers.py  test_catalog.py  test_channel_adapters.py  test_dialog_and_reports.py  test_intake_state_machine.py  test_intents_and_safety.py  test_normalizer.py  test_site_leads.py  test_webhook_idempotency.py
(+3 files in other folders)
